testcases/error/unused_return.veryl
module unused_return {
    function FuncA () -> logic {
        return 0;
    }

    always_comb {
        FuncA();
    }
}
